Fixed indentation, linebreak, reformatted.

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,14 @@
 {
   "name": "dma/dma_elementgenerator",
   "description": "Erlaubt das Erstellen von eigenen Contentelement und Modulen",
-  "keywords": ["elements","contentelement","modules","layout","content","contao"],
+  "keywords": [
+    "elements",
+    "contentelement",
+    "modules",
+    "layout",
+    "content",
+    "contao"
+  ],
   "type": "contao-module",
   "license": "LGPL",
   "authors": [
